// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component headings match snapshots 1`] = `
<div>
  <h1
    class="text-3xl"
  >
    Title
  </h1>
</div>
`;

exports[`Title component headings match snapshots 2`] = `
<div>
  <h2
    class="text-2xl"
  >
    Title
  </h2>
</div>
`;

exports[`Title component headings match snapshots 3`] = `
<div>
  <h3
    class="text-xl"
  >
    Title
  </h3>
</div>
`;

exports[`Title component headings match snapshots 4`] = `
<div>
  <h4
    class="text-lg"
  >
    Title
  </h4>
</div>
`;

exports[`Title component headings match snapshots 5`] = `
<div>
  <h5
    class="text-base"
  >
    Title
  </h5>
</div>
`;

exports[`Title component headings match snapshots 6`] = `
<div>
  <h6
    class="text-sm"
  >
    Title
  </h6>
</div>
`;
